trova amici - fb login migliorato, immagine profilo e nome

--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -45,6 +45,7 @@
     <string name="findfriends_logout">Logout</string>
     <string name="findfriends_login_message">Loggati con Facebook per usare il trovamici!</string>
     <string name="findfriends_logout_message">Benvenuto!</string>
+    <string name="findfriends_wellcome_name">Benvenuto, </string>
     <string name="findfriends_my_marker">Tu sei qui</string>
     <string name="findfriends_login_button">Facebook Login</string>
     
