--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends.xml
@@ -1,44 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
+    xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp" >
+        android:layout_margin="0dp" 
+        android:orientation="horizontal"
+        >
 
-        <TableRow
-            android:id="@+id/tableRowFF1"
+        <com.facebook.widget.LoginButton
+            android:id="@+id/btnLogInOut"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp"
+            fb:login_text="Log in"
+            fb:logout_text="Log out" />
 
             <TextView
                 android:id="@+id/txtFFMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <com.facebook.widget.LoginButton
-                android:id="@+id/btnLogInOut"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:layout_marginTop="30dp" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Oh Bischero!! E loggati!!"
+                 />
             
-            
-        </TableRow>
-    </TableLayout>
+	</LinearLayout>
+	<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp" 
+        android:orientation="horizontal"
+        >       
 
-    <Button
-        android:id="@+id/btnLogInOutOLD"
-        
-        android:text="Login"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    
+	    <com.facebook.widget.ProfilePictureView
+          android:id="@+id/ffriends_img_user"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:gravity="center_horizontal"
+          facebook:preset_size="small" />
+	    
+            <TextView
+                android:id="@+id/ff_txtUserFirstName"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:text="user" />
+
+    </LinearLayout>
     <fragment
         android:id="@+id/mapFindFriends"
         android:name="com.google.android.gms.maps.SupportMapFragment"
