--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="button_background">#db555555</color>
     <color name="button_background_pressed">#858585</color>
 	<color name="coral_light">#F08080</color>
+	<color name="yellow">#00FFFF</color>
+	<color name="orange_ligh">#FFE4C4</color>
 </resources>
