--- a/EclipseProg/Scouthis/res/values/styles.xml
+++ b/EclipseProg/Scouthis/res/values/styles.xml
@@ -97,8 +97,85 @@
     
     
     
-    <!--  from sveglia project END -->
+    <!--  from sveglia project -->
+    <!--  TAB TRY MINE EDO -->
+    	
+    	<style name="Widget.MyTitlepageIndicator">
+		    <item name="footerColor">#ffffffff</item>
+		    <item name="footerIndicatorStyle">underline</item>
+		    <item name="footerIndicatorHeight">3dp</item>
+		    <item name="footerLineHeight">3dp</item>
+		    <item name="footerPadding">30dp</item>
+		    <item name="selectedColor">#FF0000</item>
+		</style>
+    <!--    -->
+    <!--  TAB CON ICONE-->
+    <style name="StyledIndicators" parent="@android:style/Theme.Light">
+       	 <item name="vpiTabPageIndicatorStyle">@style/CustomTabPageIndicator</item>
+	        <!--  <item name="vpiCirclePageIndicatorStyle">@style/CustomCirclePageIndicator</item>
+	       		 <item name="vpiLinePageIndicatorStyle">@style/CustomLinePageIndicator</item>
+	        	<item name="vpiTitlePageIndicatorStyle">@style/CustomTitlePageIndicator</item>
+	       
+	        	<item name="vpiUnderlinePageIndicatorStyle">@style/CustomUnderlinePageIndicator</item>
+	        -->
+    </style>
+
+    
+    <style name="CustomTabPageIndicator" parent="Widget.TabPageIndicator">
+        <item name="android:background">@drawable/custom_tab_indicator</item>
+        <item name="android:textAppearance">@style/CustomTabPageIndicator.Text</item>
+        <item name="android:textColor">#FF555555</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:divider">@drawable/custom_tab_indicator_divider</item>
+        
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:fadingEdge">horizontal</item>
+        <item name="android:fadingEdgeLength">8dp</item>
+    </style>
+
+    <!-- 
+    <style name="CustomCirclePageIndicator">
+        <item name="fillColor">#00888888</item>
+        <item name="strokeColor">#000000</item>
+        <item name="strokeWidth">2dp</item>
+        <item name="radius">10dp</item>
+        <item name="centered">true</item>
+    </style>    
+    
+    <style name="CustomLinePageIndicator">
+        <item name="strokeWidth">4dp</item>
+        <item name="lineWidth">30dp</item>
+        <item name="unselectedColor">#00BFFF</item>
+        <item name="selectedColor">#00BFFF</item>
+    </style>
+        
+    <style name="CustomTitlePageIndicator">
+        <item name="android:background">#00FFFF</item>
+        <item name="footerColor">#0000CD</item>
+        <item name="footerLineHeight">1dp</item>
+        <item name="footerIndicatorHeight">3dp</item>
+        <item name="footerIndicatorStyle">underline</item>
+        <item name="android:textColor">#00EE00</item>
+        <item name="selectedColor">#191970</item>
+        <item name="selectedBold">true</item>
+    </style>
     
     
+    
+    <style name="CustomUnderlinePageIndicator">
+        <item name="selectedColor">#00000000</item>
+        <item name="android:background">#00CC00</item>
+        <item name="fadeLength">1000</item>
+        <item name="fadeDelay">1000</item>
+    </style>
+    -->
+    
+    <style name="CustomTabPageIndicator.Text" parent="android:TextAppearance.Medium">
+        <item name="android:typeface">monospace</item>
+    </style>
+    
+    
+    <!--   FINE TAB CON ICONE -->
 
 </resources>
