--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
@@ -1,5 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
     xmlns:fb="http://schemas.android.com/apk/res-auto"
@@ -23,12 +21,12 @@
             fb:login_text="Log in"
             fb:logout_text="Log out" />
 
-            <TextView
-                android:id="@+id/txtFFLogoutMessage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Oh Bischero!! E loggati!!" />
+		<TextView
+		    android:id="@+id/txtFFLogoutMessage"
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    android:gravity="center"
+		    android:text="Oh Bischero!! E loggati!!" />
             
 	</LinearLayout>
 	
@@ -38,29 +36,28 @@
         android:layout_margin="5dp" 
         android:orientation="horizontal" >       
 
-	    <com.facebook.widget.ProfilePictureView
-          android:id="@+id/ffriends_img_user"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"
-          android:gravity="center_horizontal"
-          facebook:preset_size="small" />
+		<com.facebook.widget.ProfilePictureView
+		     android:id="@+id/ffriends_img_user"
+		     android:layout_width="wrap_content"
+		     android:layout_height="wrap_content"
+		     android:layout_gravity="center"
+		     android:gravity="center_horizontal"
+		     facebook:preset_size="small" />
 	    
-            <TextView
-                android:id="@+id/ff_txtUserFirstName"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:gravity="center"
-                android:text="user" />
-            
-           <com.facebook.widget.ProfilePictureView
-                android:id="@+id/ffriends_img2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:visibility="invisible"
-                fb:preset_size="small" >
-            </com.facebook.widget.ProfilePictureView>
+		<TextView
+		     android:id="@+id/ff_txtUserFirstName"
+		     android:layout_width="fill_parent"
+		     android:layout_height="fill_parent"
+		     android:gravity="center"
+		     android:text="user" />
+		 
+		<com.facebook.widget.ProfilePictureView
+		     android:id="@+id/ffriends_img2"
+		     android:layout_width="wrap_content"
+		     android:layout_height="wrap_content"
+		     android:gravity="center_horizontal"
+		     android:visibility="invisible"
+		     fb:preset_size="small" />
 
     </LinearLayout>
     
