--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter.xml
@@ -26,7 +26,7 @@
             android:gravity="right|center_vertical" >
 
             <Button
-                android:id="@+id/btnLogInOut"
+                android:id="@+id/btnNewRun"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fragments_new" />
@@ -42,8 +42,10 @@
     </TableLayout>
 
     <TableLayout
+        android:id="@+id/stepStatistics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="visible"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp" >
 
