--- a/EclipseProg/Scouthis/res/layout/fragment_section_alarms_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alarms_home.xml
@@ -33,7 +33,7 @@
     </LinearLayout>
     	
     <ListView
-        android:id="@+id/step_listview"
+        android:id="@+id/alarm_listview"
         android:layout_width="fill_parent"
         android:layout_height="402dp"
         android:divider="#b5b5b5"
