--- a/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_gps.xml
@@ -171,7 +171,7 @@
                 android:textSize="24sp" />
             
 			<TextView
-			    android:id="@+id/txtPrecision"
+			    android:id="@+id/txtDistance"
 			    android:layout_width="0dp"
 			    android:layout_height="wrap_content"
 			    android:layout_weight="2"
