--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_run.xml
@@ -24,8 +24,8 @@
             android:id="@+id/tableRowSC1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="right|center_vertical" >
-
+            android:gravity="right|center_vertical" >"
+            
             <Button
                 android:id="@+id/step_btn_pause"
                 android:layout_width="wrap_content"
