--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_disconnected.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_disconnected.xml
@@ -3,28 +3,32 @@
     xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp" 
-        android:orientation="horizontal" >
-
-        <Button
+		
+    	
+		<TextView 
+		    android:id="@+id/txtFFLoginMessage"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="-40dp"
+		    android:gravity="center"
+		    android:textSize="20sp" />
+		
+		<Button
             android:id="@+id/btnLogIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp" />
-
+            android:layout_marginTop="15dp"
+            android:background="@drawable/btn_facebook_login"
+             />
+		        
 		<TextView
-		    android:id="@+id/txtFFLoginMessage"
+		    android:id="@+id/txtFFDontWarryMessage"
 		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-		    android:gravity="center" />
-            
-	</LinearLayout>
+		    android:layout_height="wrap_content"
+		    android:layout_marginTop="20dp"
+		    android:gravity="center"
+		    android:textSize="15sp" />
     
 </LinearLayout>
