--- a/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_findfriends_logged.xml
@@ -3,43 +3,51 @@
     xmlns:fb="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="right"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="0dp" 
-        android:orientation="horizontal" >
+        android:layout_margin="0dp"
+        android:gravity="center|left" >
 
         <Button
             android:id="@+id/btnLogOut"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginLeft="5dp" />
+            android:background="@drawable/btn_facebook_logout" />
 
-		<TextView
-		     android:id="@+id/ff_txtUserFFLoggedMessage"
-		     android:layout_width="fill_parent"
-		     android:layout_height="fill_parent"
-		     android:gravity="center" />
-            
-	</LinearLayout>
+        <fragment
+            android:id="@+id/mapFindFriends"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/ff_profilePic"
+            android:layout_margin="5dp" />
 
-    <fragment
-        android:id="@+id/mapFindFriends"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp" />
-	
-	<com.facebook.widget.ProfilePictureView
-	     android:id="@+id/ffriends_profilepicture"
-	     android:layout_width="wrap_content"
-	     android:layout_height="wrap_content"
-	     android:gravity="center_horizontal"
-	     android:visibility="invisible"
-	     fb:preset_size="small" />
-    
+        <ImageView
+            android:id="@+id/ff_profilePic"
+            android:layout_width="50dp"
+            android:layout_height="52dp"
+            android:layout_alignBottom="@+id/ff_txtUserFFLoggedMessage"
+            android:layout_alignRight="@+id/mapFindFriends"
+            android:layout_alignTop="@+id/btnLogOut" />
+
+        
+        <TextView
+            android:id="@+id/ff_txtUserFFLoggedMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/btnLogOut"
+            android:layout_centerHorizontal="true"
+            android:gravity="left"
+            android:text="Benvenuto"
+            android:textSize="15sp" />
+
+    </RelativeLayout>
+
 </LinearLayout>
