--- a/EclipseProg/Scouthis/res/layout/stepcounter_list_row.xml
+++ b/EclipseProg/Scouthis/res/layout/stepcounter_list_row.xml
@@ -1,96 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/row_container"
-    android:layout_width="fill_parent"
-    android:layout_height="100dp"
+    android:id="@+id/lst_step_container"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/list_selector"
-    android:orientation="horizontal"
-    android:padding="5dip" >
-
-    <!-- ListRow Left sied Thumbnail image -->
-
-    <LinearLayout
-        android:id="@+id/thumbnail"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:background="@drawable/image_bg"
-        android:padding="3dip" >
-
-        <ImageView
-            android:id="@+id/lst_step_image"
-            android:layout_width="100dip"
-            android:layout_height="100dip"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/map_stephistory_demo" />
-    </LinearLayout>
-
-	<LinearLayout
-	    android:id="@+id/lst_step_statistics"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:orientation="vertical" >
-		
-		    <LinearLayout
-		        android:layout_width="match_parent"
-		        android:layout_height="wrap_content"
-		        android:orientation="horizontal" >
-	
-		          <TextView
-		              android:id="@+id/lst_step_distance_lab"
-		              android:layout_width="wrap_content"
-		              android:layout_height="wrap_content"
-		              android:layout_marginLeft="20dp"
-		              android:gravity="left"
-		              android:text="distance:"
-		              android:textColor="#900404"
-		              android:textSize="15sp"
-		              android:textStyle="bold"
-		              android:typeface="sans" />
-
-		          <TextView
-		              android:id="@+id/lst_step_distance"
-		              android:layout_width="wrap_content"
-		              android:layout_height="wrap_content"
-		              android:layout_marginLeft="10dp"
-		              android:text="2 km "
-		              android:textColor="#040404"
-		              android:textSize="20sp"
-		              android:textStyle="bold"
-		              android:typeface="sans" />
-
-			</LinearLayout>
-	
-			<LinearLayout
-			    android:layout_width="match_parent"
-			    android:layout_height="wrap_content"
-			    android:layout_marginTop="10dp"
-			    android:orientation="horizontal" >
-	
-		          <TextView
-		              android:id="@+id/lst_step_speed_lab"
-		              android:layout_width="wrap_content"
-		              android:layout_height="wrap_content"
-		              android:layout_marginLeft="20dp"
-		              android:gravity="left"
-		              android:text="speed:"
-		              android:textColor="#900404"
-		              android:textSize="15sp"
-		              android:textStyle="bold"
-		              android:typeface="sans" />
-
-		          <TextView
-		              android:id="@+id/lst_step_speed"
-		              android:layout_width="wrap_content"
-		              android:layout_height="wrap_content"
-		              android:layout_marginLeft="20dp"
-		              android:gravity="left"
-		              android:text="10 km/h "
-		              android:textColor="#040404"
-		              android:textSize="20sp"
-		              android:textStyle="bold"
-		              android:typeface="sans" />
-
-			</LinearLayout>   
-	 </LinearLayout>
+    >
+    <TextView 
+        android:id="@+id/lst_step_date"
+        android:text="10/12/2014"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="3dip"
+        android:textSize="20sp"
+        />
     
+	<RelativeLayout 
+	    android:id="@+id/row_container"
+	    android:layout_width="fill_parent"
+	    android:layout_height="160dp"
+	    android:padding="5dip" >
+	
+	    <!-- ListRow Left sied Thumbnail image -->
+	
+	    <LinearLayout
+	        android:id="@+id/thumbnail"
+	        android:layout_width="wrap_content"
+	        android:layout_height="160dp"
+	        android:background="@drawable/image_bg"
+	        android:padding="3dip" >
+	
+	        <ImageView
+	            android:id="@+id/lst_step_image"
+	            android:layout_width="120dip"
+	            android:layout_height="120dip"
+	            android:layout_gravity="center_vertical"
+	            android:src="@drawable/map_stephistory_demo" />
+	    </LinearLayout>
+	
+	    <LinearLayout
+	        android:id="@+id/lst_step_statistics"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignBaseline="@+id/thumbnail"
+	        android:layout_toRightOf="@+id/thumbnail"
+	        android:orientation="vertical" >
+	
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="horizontal" 
+	            android:layout_marginLeft="10dp">
+	
+	            <TextView
+	                android:id="@+id/lst_step_distance_lab"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                
+	                android:gravity="left"
+	                android:text="distance:"
+	                android:textColor="#900404"
+	                android:textSize="15sp"
+	                android:textStyle="bold"
+	                android:typeface="sans" />
+	
+	            <TextView
+	                android:id="@+id/lst_step_distance"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginLeft="10dp"
+	                android:text="2 km "
+	                android:textColor="#040404"
+	                android:textSize="18sp"
+	                android:typeface="sans" />
+	
+	        </LinearLayout>
+	
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="10dp"
+	            
+	            android:orientation="horizontal" >
+	
+	            <TextView
+	                android:id="@+id/lst_step_speed_lab"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:gravity="left"
+	                android:layout_marginLeft="10dp"
+	                android:text="speed:"
+	                android:textColor="#900404"
+	                android:textSize="15sp"
+	                android:textStyle="bold"
+	                android:typeface="sans" />
+	
+	            <TextView
+	                android:id="@+id/lst_step_speed"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:gravity="left"
+	                android:text="10 km/h "
+	                android:layout_marginLeft="10dp"
+	                android:textColor="#040404"
+	                android:textSize="18sp"
+	                android:typeface="sans" />
+	        </LinearLayout>
+	    </LinearLayout>
+	
+	    <ImageView
+	        android:id="@+id/lst_step_trash"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_alignBottom="@+id/thumbnail"
+	        android:layout_alignParentRight="true"
+	        
+	        android:src="@drawable/trash_dark" />
+	
+	</RelativeLayout>
 </LinearLayout>
