--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
@@ -1,24 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayout1"
+    android:layout_marginLeft="3dip"
+    android:layout_marginRight="3dip"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
     <ListView
         android:id="@+id/step_listview"
         android:layout_width="fill_parent"
-        android:layout_height="402dp"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/step_history_gohome_cont"
         android:layout_marginTop="10dp"
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" >
+
     </ListView>
 
-    <Button
-        android:id="@+id/step_btn_goHome"
+    <RelativeLayout
+        android:id="@+id/step_history_gohome_cont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.82"
-        android:text="Go Home!" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal" >
 
-</LinearLayout>
+        <ImageButton
+            android:id="@+id/step_btn_goHome"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/actionb_foot" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="3dip"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:text="@string/stepcounter_gohome"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/coral_light" />
+    </RelativeLayout>
+
+</RelativeLayout>
