--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
+    android:id="@+id/step_history_outer"
     android:layout_marginLeft="3dip"
     android:layout_marginRight="3dip"
     android:layout_width="match_parent"
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/step_history_gohome_cont"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="2dip"
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" >
@@ -20,20 +21,12 @@
 
     <RelativeLayout
         android:id="@+id/step_history_gohome_cont"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="3dip"
         android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/step_btn_goHome"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/actionb_foot" />
 
         <TextView
             android:id="@+id/textView1"
@@ -45,6 +38,17 @@
             android:text="@string/stepcounter_gohome"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/coral_light" />
+
+        <ImageButton
+            android:id="@+id/step_btn_goHome"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="-2dip"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/actionb_foot" />
+
     </RelativeLayout>
 
 </RelativeLayout>
