--- a/EclipseProg/Scouthis/res/layout/fragment_section_alarms_set_clock.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alarms_set_clock.xml
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:text="@string/scegli_giorni" />
+        android:text="@string/scegli_giorni"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btnAlarmSetOk"
@@ -39,9 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            
             android:text="L"
-            android:textColor="#ffffff"
+            android:textColor="@color/alarm_day_colour"
             android:textSize="40sp" />
 
         <TextView
@@ -50,7 +50,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            
             android:text="M"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#ffffff"
@@ -62,11 +61,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            
             android:text="M"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#ffffff"
-            android:textSize="40sp"  />
+            android:textSize="40sp" />
 
         <TextView
             android:id="@+id/txtGiov"
@@ -74,10 +72,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            
             android:text="G"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#ffffff" 
+            android:textColor="#ffffff"
             android:textSize="40sp" />
 
         <TextView
@@ -86,10 +83,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            
             android:text="V"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#ffffff" 
+            android:textColor="#ffffff"
             android:textSize="40sp" />
 
         <TextView
@@ -97,13 +93,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            
             android:clickable="true"
-            
             android:text="S"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textColor="#ffffff"
-            android:textSize="40sp"  />
+            android:textSize="40sp" />
 
         <TextView
             android:id="@+id/txtDom"
@@ -111,10 +105,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:clickable="true"
-            
             android:text="D"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#ffffff" 
+            android:textColor="#ffffff"
             android:textSize="40sp" />
     </LinearLayout>
 
@@ -122,95 +115,111 @@
         android:id="@+id/birdschoose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/btnAlarmSetOk"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/weekdayll"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/TextView08"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@string/scegli_uccello" />
+            android:text="@string/scegli_uccello"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/birdsll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="30dp"
+            android:layout_weight="0.20"
             android:orientation="vertical" >
 
-              <LinearLayout
-                android:id="@+id/firstlinebirds"
-                android:layout_weight="1"
+            <RelativeLayout
+                android:id="@+id/alarm_firstline_birds"
                 android:layout_width="match_parent"
-                android:layout_height="0dip"
-                
-                android:scaleType="centerInside"
-                android:orientation="horizontal" >
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3dip"
+                android:layout_marginRight="3dip"
+                android:orientation="horizontal"
+                android:scaleType="centerInside" >
 
-                 <ImageView
-                     android:id="@+id/imgCardellino"
-                     android:layout_weight="1"
-                     android:layout_width="wrap_content"
-                     android:layout_height="49dp"
-                     android:scaleType="centerInside"
-                     android:src="@drawable/bird_cardellino" />
+                <ImageView
+                    android:id="@+id/imgCardellino"
+                    android:layout_width="wrap_content"
+                    android:layout_height="49dp"
+                    android:layout_alignBaseline="@+id/imgPasseraSc"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/bird_cardellino" />
 
                 <ImageView
                     android:id="@+id/imgPasseraSc"
-                    android:layout_weight="1"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:scaleType="centerInside"
-                      android:src="@drawable/bird_passera" />
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/bird_passera" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/alarms_centerline_birds"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-30dp"
+                android:layout_weight="1" >
 
                 <ImageView
                     android:id="@+id/imgGufo"
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="56dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_weight="1"
                     android:scaleType="centerInside"
                     android:src="@drawable/bird_gufo" />
+            </RelativeLayout>
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/secondlinebirds"
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="0dip"
-                
-                android:scaleType="centerInside"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/imgUpupa"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    
-                    android:scaleType="centerInside"
-                    android:src="@drawable/bird_upupa" />
+            <RelativeLayout
+                android:id="@+id/alarm_secondline_birds"
+                android:layout_width="wrap_content"
+                android:layout_height="85dp"
+                android:layout_marginLeft="3dip"
+                android:layout_marginRight="3dip"
+                android:layout_marginTop="30dp" >
 
                 <ImageView
                     android:id="@+id/imgPettirosso"
-                    android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
                     android:scaleType="centerInside"
                     android:src="@drawable/bird_pettirosso" />
 
                 <ImageView
-                    android:id="@+id/imgMerlo"
-                    android:layout_weight="1"
+                    android:id="@+id/imgUpupa"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="14dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/bird_upupa" />
+
+                <ImageView
+                    android:id="@+id/imgMerlo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
                     android:scaleType="centerInside"
                     android:src="@drawable/bird_merlo" />
-
-            </LinearLayout>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 
