--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_home.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical" >
     <RelativeLayout 
         android:id="@+id/step_home_newrun"
-         
+         android:layout_marginLeft="3dip"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" 
          android:orientation="horizontal">
