Mi fa male il dito

--- a/EclipseProg/Scouthis/res/values/strings_fragments.xml
+++ b/EclipseProg/Scouthis/res/values/strings_fragments.xml
@@ -9,7 +9,7 @@
         Attivalo perché funzioni al meglio!</string>
     <string name="fragments_step_alert">Il Contapassi ha bisogno del Gps. &lt;br&gt;
         Attivalo perché funzioni al meglio!</string>
-    <string name="fragments_friends_alert">Il Trova Amici ha bisogno del Gps. &lt;br&gt;
+    <string name="fragments_friends_alert">Il Trova Amici ha bisogno del Gps.\n
         Attivalo perché funzioni al meglio!</string>
     
     
