--- a/EclipseProg/Scouthis/res/layout/frame_gps.xml
+++ b/EclipseProg/Scouthis/res/layout/frame_gps.xml
@@ -1,7 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/findfriends_frame" >
+    android:id="@+id/gps_frame" >
 
 </FrameLayout>
