--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -11,4 +11,5 @@
 	<color name="orange_ligh">#FFE4C4</color>
 	<color name="maroon">#800000</color>
 	<color name="alarm_day_colour">#3080A2</color>
+	<color name="dark_green">#006400</color>
 </resources>
