--- a/EclipseProg/Scouthis/res/layout/fragment_section_alarms_home.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_alarms_home.xml
@@ -1,43 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    
     android:id="@+id/fragment_home_linlay"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
-	
-    <LinearLayout
+    android:layout_margin="@dimen/fragment_border_side"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:id="@+id/RelativeLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/list_selector"
-        android:orientation="horizontal" >
+        android:layout_height="match_parent" >
 
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="15pt"
+            android:layout_above="@+id/alarm_listview"
             android:gravity="fill_vertical|center_horizontal"
             android:text="Alarms"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/coral_light" />
+            android:textColor="@color/coral_light"
+            android:textSize="20sp" />
 
-	    <ImageView
-	        android:id="@+id/addAlarmImg"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:contentDescription="add a new alarm"
-	        android:src="@drawable/ic_action_new" />
+        <ListView
+            android:id="@+id/alarm_listview"
+            android:layout_width="fill_parent"
+            android:layout_height="402dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/addAlarmImg"
+            android:divider="#b5b5b5"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_selector" >
 
-    </LinearLayout>
-    	
-    <ListView
-        android:id="@+id/alarm_listview"
-        android:layout_width="fill_parent"
-        android:layout_height="402dp"
-        android:divider="#b5b5b5"
-        android:dividerHeight="1dp"
-        android:listSelector="@drawable/list_selector" />
+        </ListView>
+
+        <at.markushi.ui.CircleButton
+            android:id="@+id/addAlarmImg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:contentDescription="add a new alarm"
+            android:layout_marginBottom="@dimen/fragment_border_top"
+            android:layout_marginTop="@dimen/fragment_border_top"
+            app:cb_color="@color/dark_green"
+            android:src="@drawable/ic_action_new" />
+
+    </RelativeLayout>
 
 </LinearLayout>
