--- a/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
+++ b/EclipseProg/Scouthis/res/layout/fragment_section_stepcounter_history.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/step_history_outer"
-    android:layout_marginLeft="3dip"
-    android:layout_marginRight="3dip"
+    android:layout_margin="@dimen/fragment_border_side"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -12,7 +11,7 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/step_history_gohome_cont"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="2dip"
+        
         android:divider="#b5b5b5"
         android:dividerHeight="1dp"
         android:listSelector="@drawable/list_selector" >
@@ -25,13 +24,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="3dip"
+        android:layout_marginTop="@dimen/fragment_border_top"
         android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="3dip"
+            
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
@@ -43,7 +42,7 @@
             android:id="@+id/step_btn_goHome"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginRight="-2dip"
+            
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:scaleType="centerCrop"
