prove colore non piangere!

--- a/EclipseProg/Scouthis/res/values/colors.xml
+++ b/EclipseProg/Scouthis/res/values/colors.xml
@@ -12,4 +12,7 @@
 	<color name="maroon">#800000</color>
 	<color name="alarm_day_colour">#3080A2</color>
 	<color name="dark_green">#006400</color>
+	<color name="pergamena">#FFFFC2</color>
+	
+	<color name="senape">#FFE118</color>
 </resources>
