--- a/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
+++ b/EclipseProg/Scouthis/res/layout/activity_main_iconed_tabs.xml
@@ -4,12 +4,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@drawable/"
 
     <com.viewpagerindicator.TabPageIndicator
         android:id="@+id/indicator"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
+        android:background="@color/pergamena"
         />
     	
     <android.support.v4.view.ViewPager
